[package]
name = "passphoto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.9"
wasm-bindgen = "0.2.105"

[dependencies.web-sys]
version = "0.3.82"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'DomRect',
  'HtmlImageElement',
  'HtmlInputElement'
]

#[profile.release]
#lto = true

[lib]
crate-type = ["cdylib", "rlib"]
